# legion

./: Cargo.toml
codegen/src/: lib.rs
src/: lib.rs
src/internals/: entity.rs  entry.rs  event.rs  hash.rs  insert.rs  mod.rs  permissions.rs  subworld.rs  world.rs
src/internals/iter/: indexed.rs  map.rs  zip.rs
src/internals/query/: mod.rs
src/internals/query/filter/: and.rs  any.rs  component.rs  maybe_changed.rs  mod.rs  not.rs  or.rs  passthrough.rs  try_component.rs
src/internals/query/view/: entity.rs  mod.rs  read.rs  try_read.rs  try_write.rs  write.rs
src/internals/serialize/: archetypes.rs  de.rs  entities.rs  id.rs  mod.rs
src/internals/storage/: archetype.rs  component.rs  group.rs  index.rs  mod.rs  packed.rs  slicevec.rs
src/internals/systems/: command.rs  resources.rs  schedule.rs  system.rs
