[package]
name = "legion"
version = "0.4.0"
description = "High performance entity component system (ECS) library"
authors = ["Thomas Gillen <thomas.gillen@googlemail.com>"]
repository = "https://github.com/amethyst/legion"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]
readme = "readme.md"
license = "MIT"
edition = "2018"

[features]
default = ["std", "parallel", "serialize", "crossbeam-events", "codegen"]
parallel = ["std", "rayon"]
extended-tuple-impls = []
serialize = ["std", "serde", "erased-serde", "uuid/serde", "uuid/v4", "scoped-tls-hkt"]
crossbeam-events = ["crossbeam-channel"]
codegen = ["legion_codegen"]
stdweb = ["uuid/stdweb"]
wasm-bindgen = ["uuid/wasm-bindgen"]
std = ["parking_lot", "bit-set/std", "downcast-rs/std", "uuid/std", "itertools/use_std", "thiserror"]
alloc = ["itertools/use_alloc", "hashbrown"]
adven-gba = [ "adven-thread-local", "adven/gba" ]

[dependencies]
legion_codegen = { path = "codegen", version = "0.4.0", optional = true }
smallvec = "1.4"
itertools = { version = "0.10", default-features = false }
downcast-rs = { version = "1.2", default-features = false }
paste = "1.0.0"
parking_lot = { version = "0.11", optional = true }
bit-set = { version = "0.5", default-features = false }
thiserror = { version = "1.0", optional = true }
uuid = { version = "0.8", default-features = false }
rayon = { version = "1.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
scoped-tls-hkt = { version = "0.1", optional = true }
erased-serde = { version = "0.3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
atomic_refcell = "0.1.6"
hashbrown = { version = "0.9.1", optional = true }
adven = { path = "../../adven/adven", optional = true }
adven-thread-local = { path = "../adven-thread-local", optional = true }

[patch.crates-io]
radium = { path = "../../adven/radium" }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
criterion = "0.3"
cgmath = "0.18"
trybuild = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "parallel_query"
harness = false
required-features = ["parallel"]

[[bench]]
name = "transform"
harness = false
required-features = ["parallel"]

[[bench]]
name = "insertion"
harness = false

[[test]]
name = "codegen"
required-features = ["codegen"]

[[test]]
name = "systems_par_for_each"
required-features = ["parallel"]
